# Copyright 2022 Aurora Operations, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

################################################################################
# Public libraries and tests

cc_library(
    name = "au",
    hdrs = ["au.hh"],
    visibility = ["//visibility:public"],
    deps = [
        ":chrono_interop",
        ":constant",
        ":constants",
        ":math",
        ":units",
    ],
)

cc_test(
    name = "au_test",
    size = "small",
    srcs = ["au_test.cc"],
    deps = [
        ":au",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "constants",
    hdrs = glob(["constants/*.hh"]),
    visibility = ["//visibility:public"],
    deps = [
        ":constant",
        ":units",
    ],
)

cc_test(
    name = "constants_test",
    size = "small",
    srcs = glob(["constants/test/*.cc"]),
    deps = [
        ":constants",
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "cpp20_test",
    size = "small",
    srcs = ["cpp20_test.cc"],
    tags = ["manual"],
    deps = [
        ":constants",
        ":math",
        ":prefix",
        ":quantity",
        ":quantity_point",
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "fwd",
    hdrs = ["fwd.hh"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fwd_test",
    size = "small",
    srcs = [
        "fwd_test.cc",
        "fwd_test_lib.cc",
        "fwd_test_lib.hh",
    ],
    deps = [
        ":fwd",
        ":io",
        ":quantity",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "io",
    hdrs = ["io.hh"],
    visibility = ["//visibility:public"],
    deps = [
        ":constant",
        ":magnitude",
        ":quantity",
        ":quantity_point",
        ":unit_symbol",
        ":zero",
    ],
)

cc_test(
    name = "io_test",
    size = "small",
    srcs = ["io_test.cc"],
    deps = [
        ":constants",
        ":io",
        ":prefix",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = ["testing.hh"],
    visibility = ["//visibility:public"],
    deps = [
        ":io",
        ":stdx",
        ":unit_of_measure",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "testing_test",
    size = "small",
    srcs = ["testing_test.cc"],
    deps = [
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "units",
    hdrs = glob(["units/*.hh"]),
    visibility = ["//visibility:public"],
    deps = [
        ":prefix",
        ":quantity",
        ":quantity_point",
        ":unit_of_measure",
        ":unit_symbol",
    ],
)

cc_test(
    name = "units_test",
    size = "small",
    srcs = glob(["units/test/*.cc"]),
    deps = [
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

################################################################################
# Implementation detail libraries and tests

cc_library(
    name = "abstract_operations",
    hdrs = ["abstract_operations.hh"],
    visibility = ["//fuzz:__subpackages__"],
    deps = [":magnitude"],
)

cc_test(
    name = "abstract_operations_test",
    size = "small",
    srcs = ["abstract_operations_test.cc"],
    deps = [
        ":abstract_operations",
        ":magnitude",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "apply_magnitude_test",
    size = "small",
    srcs = ["apply_magnitude_test.cc"],
    deps = [
        ":conversion_strategy",
        ":magnitude",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "apply_rational_magnitude_to_integral_test",
    size = "small",
    srcs = ["apply_rational_magnitude_to_integral_test.cc"],
    deps = [
        ":conversion_strategy",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "chrono_interop",
    hdrs = ["chrono_interop.hh"],
    deps = [
        ":prefix",
        ":quantity",
        ":units",
    ],
)

cc_test(
    name = "chrono_interop_test",
    size = "small",
    srcs = ["chrono_interop_test.cc"],
    deps = [
        ":chrono_interop",
        ":prefix",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "chrono_policy_validation",
    testonly = True,
    hdrs = ["chrono_policy_validation.hh"],
    deps = [
        ":dimension",
        ":quantity",
        ":stdx",
        ":unit_of_measure",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "chrono_policy_validation_test",
    size = "small",
    srcs = ["chrono_policy_validation_test.cc"],
    deps = [
        ":chrono_policy_validation",
        ":prefix",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "constant",
    hdrs = ["constant.hh"],
    deps = [
        ":fwd",
        ":quantity",
        ":unit_of_measure",
        ":wrapper_operations",
    ],
)

cc_test(
    name = "constant_test",
    size = "small",
    srcs = ["constant_test.cc"],
    deps = [
        ":chrono_interop",
        ":constant",
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "conversion_policy",
    hdrs = ["conversion_policy.hh"],
    deps = [
        ":conversion_strategy",
        ":magnitude",
        ":operators",
        ":overflow_boundary",
        ":stdx",
        ":truncation_risk",
        ":unit_of_measure",
    ],
)

cc_test(
    name = "conversion_policy_test",
    size = "small",
    srcs = ["conversion_policy_test.cc"],
    deps = [
        ":conversion_policy",
        ":unit_of_measure",
        ":utility",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "conversion_strategy",
    hdrs = ["conversion_strategy.hh"],
    visibility = ["//fuzz:__subpackages__"],
    deps = [
        ":abstract_operations",
        ":magnitude",
        ":stdx",
    ],
)

cc_test(
    name = "conversion_strategy_test",
    size = "small",
    srcs = ["conversion_strategy_test.cc"],
    deps = [
        ":conversion_strategy",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "dimension",
    hdrs = ["dimension.hh"],
    deps = [
        ":fwd",
        ":packs",
        ":power_aliases",
    ],
)

cc_test(
    name = "dimension_test",
    size = "small",
    srcs = ["dimension_test.cc"],
    deps = [
        ":dimension",
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "magnitude",
    hdrs = ["magnitude.hh"],
    deps = [
        ":fwd",
        ":packs",
        ":power_aliases",
        ":stdx",
        ":utility",
        ":zero",
    ],
)

cc_test(
    name = "magnitude_test",
    size = "small",
    srcs = ["magnitude_test.cc"],
    deps = [
        ":magnitude",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "math",
    hdrs = ["math.hh"],
    deps = [
        ":constant",
        ":quantity",
        ":quantity_point",
        ":units",
    ],
)

cc_test(
    name = "math_test",
    size = "small",
    srcs = ["math_test.cc"],
    deps = [
        ":math",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "no_wconversion_test",
    size = "small",
    srcs = ["no_wconversion_test.cc"],
    tags = ["no_wconversion"],
    deps = [
        ":quantity",
        ":testing",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "operators",
    hdrs = ["operators.hh"],
    deps = [":stdx"],
)

cc_test(
    name = "operators_test",
    size = "small",
    srcs = ["operators_test.cc"],
    deps = [
        ":operators",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "overflow_boundary",
    hdrs = ["overflow_boundary.hh"],
    deps = [
        ":abstract_operations",
        ":magnitude",
        ":operators",
        ":stdx",
    ],
)

cc_test(
    name = "overflow_boundary_test",
    size = "small",
    srcs = ["overflow_boundary_test.cc"],
    deps = [
        ":overflow_boundary",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "packs",
    hdrs = ["packs.hh"],
    deps = [
        ":fwd",
        ":stdx",
        ":utility",
    ],
)

cc_test(
    name = "packs_test",
    size = "small",
    srcs = ["packs_test.cc"],
    deps = [
        ":packs",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "power_aliases",
    hdrs = ["power_aliases.hh"],
)

cc_test(
    name = "power_aliases_test",
    size = "small",
    srcs = ["power_aliases_test.cc"],
    deps = [
        ":packs",
        ":power_aliases",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "prefix",
    hdrs = ["prefix.hh"],
    deps = [
        ":fwd",
        ":quantity",
        ":quantity_point",
        ":unit_of_measure",
        ":unit_symbol",
    ],
)

cc_test(
    name = "prefix_test",
    size = "small",
    srcs = ["prefix_test.cc"],
    deps = [
        ":prefix",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "quantity",
    hdrs = ["quantity.hh"],
    deps = [
        ":conversion_policy",
        ":conversion_strategy",
        ":fwd",
        ":operators",
        ":overflow_boundary",
        ":rep",
        ":truncation_risk",
        ":unit_of_measure",
        ":utility",
        ":zero",
    ],
)

cc_test(
    name = "quantity_test",
    size = "small",
    srcs = [
        "quantity_chrono_policy_correspondence_test.cc",
        "quantity_test.cc",
    ],
    deps = [
        ":chrono_policy_validation",
        ":prefix",
        ":quantity",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "quantity_point",
    hdrs = ["quantity_point.hh"],
    deps = [
        ":constant",
        ":fwd",
        ":quantity",
        ":stdx",
        ":utility",
    ],
)

cc_test(
    name = "quantity_point_test",
    size = "small",
    srcs = ["quantity_point_test.cc"],
    deps = [
        ":prefix",
        ":quantity_point",
        ":testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rep",
    hdrs = ["rep.hh"],
    deps = [
        ":fwd",
        ":stdx",
    ],
)

cc_test(
    name = "rep_test",
    size = "small",
    srcs = ["rep_test.cc"],
    deps = [
        ":chrono_interop",
        ":constant",
        ":magnitude",
        ":prefix",
        ":quantity",
        ":quantity_point",
        ":rep",
        ":unit_symbol",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "static_cast_checkers_test",
    size = "small",
    srcs = ["static_cast_checkers_test.cc"],
    deps = [
        ":overflow_boundary",
        ":truncation_risk",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "stdx",
    hdrs = glob([
        "stdx/*.hh",
        "stdx/experimental/*.hh",
    ]),
)

cc_test(
    name = "stdx_test",
    size = "small",
    srcs = glob(["stdx/test/*.cc"]),
    deps = [
        ":stdx",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "truncation_risk",
    hdrs = ["truncation_risk.hh"],
    deps = [
        ":abstract_operations",
        ":magnitude",
    ],
)

cc_test(
    name = "truncation_risk_test",
    size = "small",
    srcs = ["truncation_risk_test.cc"],
    deps = [
        ":magnitude",
        ":testing",
        ":truncation_risk",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "unit_of_measure",
    hdrs = ["unit_of_measure.hh"],
    deps = [
        ":dimension",
        ":magnitude",
        ":power_aliases",
        ":stdx",
        ":utility",
        ":zero",
    ],
)

cc_test(
    name = "unit_of_measure_test",
    size = "small",
    srcs = ["unit_of_measure_test.cc"],
    deps = [
        ":constant",
        ":prefix",
        ":testing",
        ":unit_of_measure",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "unit_symbol",
    hdrs = ["unit_symbol.hh"],
    deps = [
        ":fwd",
        ":wrapper_operations",
    ],
)

cc_test(
    name = "unit_symbol_test",
    size = "small",
    srcs = ["unit_symbol_test.cc"],
    deps = [
        ":testing",
        ":unit_symbol",
        ":units",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "utility",
    hdrs = glob(["utility/*.hh"]),
    deps = [":stdx"],
)

cc_test(
    name = "utility_test",
    size = "small",
    srcs = glob(["utility/test/*.cc"]),
    deps = [
        ":testing",
        ":utility",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "wrapper_operations",
    hdrs = ["wrapper_operations.hh"],
    deps = [
        ":quantity",
        ":stdx",
    ],
)

cc_test(
    name = "wrapper_operations_test",
    size = "small",
    srcs = ["wrapper_operations_test.cc"],
    deps = [
        ":testing",
        ":units",
        ":wrapper_operations",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "zero",
    hdrs = ["zero.hh"],
    deps = [":fwd"],
)

cc_test(
    name = "zero_test",
    size = "small",
    srcs = ["zero_test.cc"],
    deps = [
        ":testing",
        ":zero",
        "@com_google_googletest//:gtest_main",
    ],
)

################################################################################
# Filegroups for the single-file tool

filegroup(
    name = "headers",
    srcs = glob(["**/*.hh"]),
    visibility = ["//:__pkg__"],
)

################################################################################
# Examples of error conditions that can occur.

cc_library(
    name = "error_examples",
    srcs = ["error_examples.cc"],
    tags = ["manual"],
    deps = ["//au"],
)
