# Copyright 2026 Aurora Operations, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Minimal Bazel project to test that Au can be consumed as an external dependency.
# This simulates a user's project that depends on Au via bzlmod.

module(
    name = "bzlmod_test_client",
)

bazel_dep(name = "rules_cc", version = "0.1.1")

# Depend on Au from the Bazel Central Registry.
# In CI, we override this to point to the local source for testing.
bazel_dep(name = "au", version = "0.3.5")
local_path_override(
    module_name = "au",
    path = "..",
)
