# Copyright 2025 Aurora Operations, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "eigen",
    hdrs = ["eigen.hh"],
    visibility = ["//visibility:public"],
    deps = ["//au"],
)

cc_test(
    name = "eigen_test",
    size = "small",
    srcs = ["eigen_test.cc"],
    deps = [
        ":eigen",
        "//au",
        "//au:testing",
        "@eigen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "materialization_copy_count_test",
    size = "small",
    srcs = ["materialization_copy_count_test.cc"],
    deps = [
        ":eigen",
        "//au",
        "//au:testing",
        "@googletest//:gtest_main",
    ],
)
